# agent-shadow-mode

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  FIRE_LINE.md  README.md
.github/workflows/: ci.yml
docs/: adapters.md  architecture.md  evaluation-criteria.md  trust-building.md
examples/: ab-test-example.py  basic_shadow.py  dry-run-example.py  evaluation_report.py  langchain_shadow.py
python/: pyproject.toml
python/src/shadow_mode/: __init__.py  ab_testing.py  comparator.py  cost_tracker.py  dry_run.py  impact_report.py  recorder.py  replay.py  report.py  runner.py  scorer.py  stats.py  types.py
python/src/shadow_mode/adapters/: __init__.py  base.py  crewai.py  generic.py  langchain.py
python/tests/: conftest.py  test_shadow_mode.py
scripts/: fire-line-audit.sh
typescript/: package.json  tsconfig.json
typescript/src/: ab-testing.ts  comparator.ts  dry-run.ts  impact-report.ts  index.ts  runner.ts  scorer.ts  types.ts
